--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
         <p><b>This</b> is my main tag</p>
         <figure>
           <a href="http://iiitt.ac.in" target="_blank">
-            <img src="images/IMG_20190525_2141490.jpg" 
-                  width="200" alt="My Photo" />
+            IIITT WEBSITE
           </a><br>
           <audio src="Multimedia/ENGLISH__Sparkle__Your_Name._(Akane_Sasu_Sora).mp3#t=00:00:30" controls>Your Name song</audio>
         </figure>
