--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       <hr>
       <progress value="30" max="100">Poll</progress>
       <hr>
-      <iframe src="http://iiitt.ac.in" width="50%" height="500px"></iframe>
+      <iframe src="https://dev-iiitt.surge.sh/" width="50%" height="500px"></iframe>
     </main>
     <footer>
       <ion-icon name="heart"></ion-icon>
